--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -91,24 +91,25 @@
 /* Styles for the actual diff tables (side-by-side and inline) */
 .diff table {
  border: 1px solid #ddd;
- border-collapse: collapse;
  border-spacing: 0;
  border-top: 0;
+ empty-cells: show;
  font-size: 12px;
  line-height: 130%;
- padding: 5px;
+ padding: 0;
  margin: 0 auto;
  table-layout: fixed;
  width: 100%;
 }
 .diff table col.lineno { width: 4em }
 .diff table th {
- border: 1px solid #d7d7d7;
+ border-right: 1px solid #d7d7d7;
  border-bottom: 1px solid #998;
  font-size: 11px;
 }
 .diff table thead th {
  background: #eee;
+ border-top: 1px solid #d7d7d7;
  color: #999;
  padding: 0 .25em;
  text-align: center;
@@ -125,48 +126,44 @@
 .diff table tbody td {
  background: #fff;
  font: normal 11px monospace;
- padding: 0;
+ padding: 1px 2px;
  vertical-align: top;
 }
 .diff table tbody.skippedlines td {
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
 }
-.diff table td del, .diff table td ins, .diff table td span {
- display: block;
- overflow: hidden;
- padding: 0 3px;
- text-decoration: none;
-}
+.diff table td del, .diff table td ins { text-decoration: none }
 .diff table td del { color: #600 }
 .diff table td ins { color: #060 }
 
 /* Styles for the inline diff */
-.diff table.inline del, .diff table.inline ins, .diff table.inline span {
- min-height: 1.5em;
-}
-.diff table.inline del {
+.diff table.inline tbody.mod td.base, .diff table.inline tbody.rem td.base {
  background: #fdd;
  border-color: #c00;
  border-style: solid;
  border-width: 0 1px 0 1px;
 }
-.diff table.inline tr.first del { border-top-width: 1px }
-.diff table.inline tr.last del { border-bottom-width: 1px }
-.diff table.inline ins {
+.diff table.inline tbody.mod td.chg, .diff table.inline tbody.add td.chg {
  background: #dfd;
  border-color: #0a0;
  border-style: solid;
  border-width: 0 1px 0 1px;
 }
-.diff table.inline tr.first ins { border-top-width: 1px }
-.diff table.inline tr.last ins { border-bottom-width: 1px }
+.diff table.inline tbody.mod tr.first td.base,
+.diff table.inline tbody.rem tr.first td.base { border-top-width: 1px }
+.diff table.inline tbody.mod tr.last td.base,
+.diff table.inline tbody.rem tr.last td.base { border-bottom-width: 1px }
+.diff table.inline tbody.mod tr.first td.chg,
+.diff table.inline tbody.add tr.first td.chg { border-top-width: 1px }
+.diff table.inline tbody.mod tr.last td.chg,
+.diff table.inline tbody.add tr.last td.chg { border-bottom-width: 1px }
 
 /* Styles for the side-by-side diff */
 .diff table.sidebyside colgroup.content { width: 50% }
-.diff table.sidebyside tr.mod td.base { background: #fe9 }
-.diff table.sidebyside tr.mod td.chg { background: #fd8 }
-.diff table.sidebyside tr.add td.base { background: #dfd }
-.diff table.sidebyside tr.add td.chg { background: #cfc }
-.diff table.sidebyside tr.rem td.base { background: #f88 }
-.diff table.sidebyside tr.rem td.chg { background: #faa }
+.diff table.sidebyside tbody.mod td.base { background: #fe9 }
+.diff table.sidebyside tbody.mod td.chg { background: #fd8 }
+.diff table.sidebyside tbody.add td.base { background: #dfd }
+.diff table.sidebyside tbody.add td.chg { background: #cfc }
+.diff table.sidebyside tbody.rem td.base { background: #f88 }
+.diff table.sidebyside tbody.rem td.chg { background: #faa }
