--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -153,9 +153,9 @@ form.inline input { margin: 1em }
  display: inline;
  margin: 0;
 }
-.#ctxtnav li li { padding: 0; }
-.#ctxtnav li li :link, .nav li li :visited { padding: 0 1em }
-.#ctxtnav li li :link:hover, .nav li li :visited:hover {
+#ctxtnav li li { padding: 0; }
+#ctxtnav li li :link, .nav li li :visited { padding: 0 1em }
+#ctxtnav li li :link:hover, .nav li li :visited:hover {
  background: #bba;
  color: #fff;
 }
