--- a/htdocs/css/report.css
+++ b/htdocs/css/report.css
@@ -55,3 +55,13 @@ h2 {
 #tktlist td.fullrow p { margin: 0; padding: .25em 1em }
 #tktlist td.fullrow hr { display: none }
 
+#tktlist tr.odd.highest { background: #fdc; border-color: #e88; color: #a22 }
+#tktlist tr.even.highest { background: #fed; border-color: #e99; color: #a22 }
+#tktlist tr.odd.high { background: #ffb; border-color: #eea; color: #880 }
+#tktlist tr.even.high { background: #ffd; border-color: #dd8; color: #880 }
+#tktlist tr.odd.normal  { background: #fbfbfb; border-color: #ddd; color: #444 }
+#tktlist tr.even.normal { background: #f6f6f6; border-color: #ccc; color: #333 }
+#tktlist tr.odd.low { background: #e7ffff; border-color: #cee; color: #099 }
+#tktlist tr.even.low { background: #dff; border-color: #bee; color: #099 }
+#tktlist tr.odd.lowest { background: #e7eeff; border-color: #cde; color: #469 }
+#tktlist tr.even.lowest { background: #dde7ff; border-color: #cde; color: #469 }
