--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -84,10 +84,11 @@ form.inline input { margin: 1em }
 
 /* Quick search */
 #search {
-  clear: both;
-  font-size: 10px;
-  margin: 0 0 1em;
-  text-align: right;
+ clear: both;
+ font-size: 10px;
+ height: 2.2em;
+ margin: 0 0 1em;
+ text-align: right;
 }
 #search input { font-size: 10px; padding: 1px }
 #search label { display: none }
