--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -270,6 +270,10 @@ table.listing th {
  padding: 0 1em .1em 0;
  font-size: 12px;
 }
+table.listing thead th a { background: 0 50% no-repeat; padding-right: 12px }
+table.listing th.asc a, table.listing th.desc a { font-weight: bold }
+table.listing th.asc a { background: url(../asc.png) 100% 50% no-repeat }
+table.listing th.desc a { background: url(../desc.png) 100% 50% no-repeat }
 table.listing tbody td, table.listing tbody th {
  border: 1px dotted #ddd;
  padding: .33em .5em;
