--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -30,7 +30,7 @@
  font-weight: bold;
  padding-right: .25em;
  position: absolute;
- left: 0;
+ left: 10px;
  text-align: right;
  width: 7.75em;
 }
